fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -10043,7 +10043,7 @@ p {
   color:black;
   font-style: italic;
   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .page-section h4.section-subheading {
@@ -10051,7 +10051,7 @@ p {
   font-weight: 400;
   color:darkred;
   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  margin-bottom: 4rem;
+  margin-bottom: -1rem;
 }
 
 @media (min-width: 768px) {
